[gd_scene load_steps=8 format=3 uid="uid://ben12aetap0mp"]

[ext_resource type="Script" uid="uid://dn0bf3h7dyigj" path="res://Script/alien_enemy.gd" id="1_0830c"]
[ext_resource type="Texture2D" uid="uid://cyvkpf5i46apr" path="res://Assets/fabbri2.png" id="2_1f0kj"]
[ext_resource type="AudioStream" uid="uid://bu0b2pad3s80c" path="res://SFX/alien-hurt.mp3" id="3_afpow"]
[ext_resource type="AudioStream" uid="uid://dle74230rrs6l" path="res://SFX/1alien-scream-89031.mp3" id="4_287tu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_afpow"]
albedo_texture = ExtResource("2_1f0kj")

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0830c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0830c"]

[node name="Enemy" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_0830c")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.992016, 0, 0.126112, 0, 1, 0, -0.126112, 0, -0.992016, 0, 0.664997, 0)
material_override = SubResource("StandardMaterial3D_afpow")
mesh = SubResource("CapsuleMesh_0830c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." groups=["Enemy"]]
transform = Transform3D(-0.992016, 0, 0.126112, 0, 1, 0, -0.126112, 0, -0.992016, 0, 0.664997, 0)
shape = SubResource("CapsuleShape3D_0830c")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." groups=["Enemy"]]

[node name="alienHurt" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_afpow")
volume_db = 1.0
autoplay = true

[node name="alienDeath" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_287tu")
volume_db = 1.0

[node name="bullet_timer" type="Timer" parent="."]
autostart = true

[node name="bullet_marker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.249993, -0.142254)

[connection signal="finished" from="alienDeath" to="." method="_on_alien_death_finished"]
[connection signal="timeout" from="bullet_timer" to="." method="_on_bullet_timer_timeout"]
